--- a/requirements.conda.txt
+++ b/requirements.conda.txt
@@ -11,9 +11,20 @@ backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
 blas=2.111=mkl
 blas-devel=3.9.0=11_osx64_mkl
 bleach=4.0.0=pyhd8ed1ab_0
+brotlipy=0.7.0=py36hfa26744_1001
 ca-certificates=2021.5.30=h033912b_0
+catalogue=2.0.5=py36h79c6626_0
+certifi=2021.5.30=py36h79c6626_0
 cffi=1.14.6=py36h66709a0_0
+chardet=4.0.0=py36h79c6626_1
+charset-normalizer=2.0.0=pyhd8ed1ab_0
+click=7.1.2=pyh9f0ad1d_0
+colorama=0.4.4=pyh9f0ad1d_0
+contextvars=2.4=py_0
+cryptography=3.4.7=py36h3d45be8_0
 cycler=0.10.0=py_2
+cymem=2.0.5=py36hefe7e0e_2
+cython-blis=0.7.4=py36hf14bfbd_0
 dataclasses=0.8=pyh787bdff_2
 decorator=5.0.9=pyhd8ed1ab_0
 defusedxml=0.7.1=pyhd8ed1ab_0
@@ -21,6 +32,8 @@ entrypoints=0.3=pyhd8ed1ab_1003
 et-xmlfile=1.1.0=pypi_0
 freetype=2.10.4=h4cff582_1
 future=0.18.2=py36h79c6626_3
+idna=3.1=pyhd3deb0d_0
+immutables=0.16=py36hfa26744_0
 importlib-metadata=4.6.4=py36h79c6626_0
 ipykernel=5.5.5=py36h495a4c6_0
 ipython=7.16.1=py36h9cf137f_2
@@ -28,6 +41,7 @@ ipython_genutils=0.2.0=py_1
 jbig=2.1=h0d85af4_2003
 jedi=0.17.2=py36h79c6626_1
 jinja2=3.0.1=pyhd8ed1ab_0
+joblib=1.0.1=pyhd8ed1ab_0
 jpeg=9d=hbcb3906_0
 jsonschema=3.2.0=pyhd8ed1ab_3
 jupyter_client=6.1.12=pyhd8ed1ab_0
@@ -52,20 +66,24 @@ libtiff=4.3.0=h1167814_1
 libuv=1.42.0=h0d85af4_0
 libwebp-base=1.2.1=h0d85af4_0
 llvm-openmp=12.0.1=hda6cdc1_1
+lml=0.1.0=pyh9f0ad1d_0
 lz4-c=1.9.3=he49afe7_1
 markupsafe=2.0.1=py36hfa26744_0
 matplotlib=3.2.2=1
 matplotlib-base=3.2.2=py36h83d3ec1_1
+metaphone=0.6=py36h9f0ad1d_1002
 mistune=0.8.4=py36hfa26744_1004
 mkl=2021.3.0=h08c4f10_555
 mkl-devel=2021.3.0=h694c41f_556
 mkl-include=2021.3.0=h08c4f10_555
+murmurhash=1.0.5=py36hefe7e0e_0
 nbclient=0.5.4=pyhd8ed1ab_0
 nbconvert=6.0.7=py36h79c6626_3
 nbformat=5.1.3=pyhd8ed1ab_0
 ncurses=6.2=h2e338ed_4
 nest-asyncio=1.5.1=pyhd8ed1ab_0
 ninja=1.10.2=h9a9d8cb_0
+nltk=3.6.2=pyhd8ed1ab_0
 notebook=6.3.0=py36h79c6626_0
 numpy=1.19.5=py36h08b5fde_2
 olefile=0.46=pyh9f0ad1d_1
@@ -73,44 +91,77 @@ openjpeg=2.4.0=h6e7aa92_1
 openpyxl=3.0.7=pypi_0
 openssl=1.1.1k=h0d85af4_1
 packaging=21.0=pyhd8ed1ab_0
+pandas=1.1.5=py36h2be6da3_0
 pandoc=2.14.1=h0d85af4_0
 pandocfilters=1.4.2=py_1
 parso=0.7.1=pyh9f0ad1d_0
+pathy=0.6.0=pyhd8ed1ab_0
 pexpect=4.8.0=pyh9f0ad1d_2
 pickleshare=0.7.5=py_1003
 pillow=8.3.1=py36h950f3bb_0
 pip=21.2.4=pyhd8ed1ab_0
+preshed=3.0.5=py36hefe7e0e_1
+probableparsing=0.0.1=py_1000
 prometheus_client=0.11.0=pyhd8ed1ab_0
 prompt-toolkit=3.0.19=pyha770c72_0
+pslpython=2.2.2=pypi_0
 ptyprocess=0.7.0=pyhd3deb0d_0
 pycparser=2.20=pyh9f0ad1d_2
+pydantic=1.8.2=py36hfa26744_0
+pyexcel=0.6.6=pyhd8ed1ab_0
+pyexcel-io=0.6.4=pyhd8ed1ab_0
 pygments=2.10.0=pyhd8ed1ab_0
+pyopenssl=20.0.1=pyhd8ed1ab_0
 pyparsing=2.4.7=pyh9f0ad1d_0
 pyrsistent=0.17.3=py36hfa26744_2
+pysocks=1.7.1=py36h79c6626_3
 python=3.6.13=h7728216_0_cpython
+python-crfsuite=0.9.7=py36hadcdec8_1
 python-dateutil=2.8.2=pyhd8ed1ab_0
 python_abi=3.6=2_cp36m
 pytorch=1.9.0=cpu_py36h41aa04d_2
+pytz=2021.1=pyhd8ed1ab_0
+pyyaml=5.4.1=py36hfa26744_1
 pyzmq=22.2.1=py36h50cd92c_0
 readline=8.1=h05e3726_0
+regex=2021.8.21=py36hfa26744_0
+requests=2.26.0=pyhd8ed1ab_0
+scikit-learn=0.24.2=py36he40f1e8_1
+scipy=1.5.3=py36h4f136de_1
 send2trash=1.8.0=pyhd8ed1ab_0
 setuptools=57.4.0=py36h79c6626_0
+shellingham=1.4.0=pyh44b312d_0
 six=1.16.0=pyh6c4a22f_0
 sleef=3.5.1=h35c211d_1
+smart_open=5.2.0=pyhd8ed1ab_0
+spacy=3.1.1=py36heb28341_0
+spacy-legacy=3.0.8=pyhd8ed1ab_0
 sqlite=3.36.0=h23a322b_0
+srsly=2.4.1=py36hefe7e0e_0
+tabulate=0.8.9=pyhd8ed1ab_0
 tbb=2021.3.0=h940c156_0
 terminado=0.11.1=py36h79c6626_0
 testpath=0.5.0=pyhd8ed1ab_0
+texttable=1.6.4=pyhd8ed1ab_0
+thinc=8.0.8=py36heb28341_0
+threadpoolctl=2.2.0=pyh8a188c0_0
 tk=8.6.11=hd798d34_0
 torchvision=0.9.0=py36h67b27ce_0_cpu
 tornado=6.1=py36hfa26744_1
+tqdm=4.62.2=pyhd8ed1ab_0
 traitlets=4.3.3=py36h9f0ad1d_1
+typer=0.3.2=pyhd8ed1ab_0
+typing-extensions=3.10.0.0=hd8ed1ab_0
 typing_extensions=3.10.0.0=pyha770c72_0
+urllib3=1.26.6=pyhd8ed1ab_0
+usaddress=0.5.10=py36_1
+wasabi=0.8.2=pyh44b312d_0
 wcwidth=0.2.5=pyh9f0ad1d_2
 webencodings=0.5.1=py_1
 wheel=0.37.0=pyhd8ed1ab_1
 xlrd=2.0.1=pyhd8ed1ab_3
 xz=5.2.5=haf1e3a3_1
+yaml=0.2.5=haf1e3a3_0
 zeromq=4.3.4=h1c7c35f_0
 zipp=3.5.0=pyhd8ed1ab_0
 zlib=1.2.11=h7795811_1010
